--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -557,8 +557,29 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
+.visible {
+	visibility: visible;
+}
 .fixed {
 	position: fixed;
+}
+.sticky {
+	position: sticky;
+}
+.top-0 {
+	top: 0px;
+}
+.bottom-\[50px\] {
+	bottom: 50px;
+}
+.bottom-\[-50px\] {
+	bottom: -50px;
+}
+.bottom-\[60px\] {
+	bottom: 60px;
+}
+.bottom-\[80px\] {
+	bottom: 80px;
 }
 .z-\[-99999\] {
 	z-index: -99999;
@@ -581,6 +602,9 @@ video {
 .m-10 {
 	margin: 2.5rem;
 }
+.m-3 {
+	margin: 0.75rem;
+}
 .mx-1 {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
@@ -588,10 +612,6 @@ video {
 .mx-3 {
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
-}
-.my-10 {
-	margin-top: 2.5rem;
-	margin-bottom: 2.5rem;
 }
 .mt-10 {
 	margin-top: 2.5rem;
@@ -605,29 +625,26 @@ video {
 .mt-2 {
 	margin-top: 0.5rem;
 }
-.ml-5 {
-	margin-left: 1.25rem;
+.mb-6 {
+	margin-bottom: 1.5rem;
 }
 .ml-10 {
 	margin-left: 2.5rem;
 }
-.mb-6 {
-	margin-bottom: 1.5rem;
+.ml-5 {
+	margin-left: 1.25rem;
 }
-.mt-4 {
-	margin-top: 1rem;
-}
-.ml-3 {
-	margin-left: 0.75rem;
-}
-.mb-10 {
-	margin-bottom: 2.5rem;
+.mt-3 {
+	margin-top: 0.75rem;
 }
 .block {
 	display: block;
 }
 .flex {
 	display: flex;
+}
+.hidden {
+	display: none;
 }
 .h-full {
 	height: 100%;
@@ -637,15 +654,6 @@ video {
 }
 .h-9 {
 	height: 2.25rem;
-}
-.h-96 {
-	height: 24rem;
-}
-.h-72 {
-	height: 18rem;
-}
-.h-\[400px\] {
-	height: 400px;
 }
 .h-\[200px\] {
 	height: 200px;
@@ -659,37 +667,28 @@ video {
 .w-1\/5 {
 	width: 20%;
 }
-.w-\[400px\] {
-	width: 400px;
-}
 .w-\[500px\] {
 	width: 500px;
 }
+.w-\[30\%\] {
+	width: 30%;
+}
 .flex-row {
 	flex-direction: row;
-}
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+.overflow-y-scroll {
+	overflow-y: scroll;
 }
 .rounded-lg {
 	border-radius: 0.5rem;
+}
+.rounded-xl {
+	border-radius: 0.75rem;
 }
 .border-2 {
 	border-width: 2px;
@@ -699,9 +698,6 @@ video {
 }
 .border-r {
 	border-right-width: 1px;
-}
-.border-l {
-	border-left-width: 1px;
 }
 .border-l-2 {
 	border-left-width: 2px;
@@ -721,13 +717,48 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
-.bg-red-700 {
+.bg-red-800 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
+	background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
 }
-.bg-red-400 {
+.bg-black {
 	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-gradient-to-tl {
+	background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+}
+.bg-gradient-to-bl {
+	background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+.bg-gradient-to-b {
+	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.bg-gradient-to-br {
+	background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+.from-red-800 {
+	--tw-gradient-from: #991b1b;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(153, 27, 27, 0));
+}
+.from-red-400 {
+	--tw-gradient-from: #f87171;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(248, 113, 113, 0));
+}
+.from-red-500 {
+	--tw-gradient-from: #ef4444;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
+}
+.from-red-600 {
+	--tw-gradient-from: #dc2626;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
+}
+.to-red-900 {
+	--tw-gradient-to: #7f1d1d;
 }
 .p-3 {
 	padding: 0.75rem;
@@ -735,12 +766,29 @@ video {
 .p-2 {
 	padding: 0.5rem;
 }
-.p-10 {
-	padding: 2.5rem;
-}
 .px-3 {
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
+}
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.px-10 {
+	padding-left: 2.5rem;
+	padding-right: 2.5rem;
+}
+.px-24 {
+	padding-left: 6rem;
+	padding-right: 6rem;
+}
+.px-20 {
+	padding-left: 5rem;
+	padding-right: 5rem;
 }
 .pl-2 {
 	padding-left: 0.5rem;
@@ -760,10 +808,6 @@ video {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
@@ -772,19 +816,20 @@ video {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
 .font-bold {
 	font-weight: 700;
-}
-.leading-5 {
-	line-height: 1.25rem;
-}
-.text-red-700 {
-	--tw-text-opacity: 1;
-	color: rgba(185, 28, 28, var(--tw-text-opacity));
 }
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.text-red-700 {
+	--tw-text-opacity: 1;
+	color: rgba(185, 28, 28, var(--tw-text-opacity));
 }
 .text-red-800 {
 	--tw-text-opacity: 1;
@@ -798,10 +843,35 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-red-500 {
+	--tw-text-opacity: 1;
+	color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl {
+	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.drop-shadow-md {
+	--tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+}
+
+input:focus {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+
+.focus\:outline-none:focus {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
 }
