--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -557,29 +557,23 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
-.visible {
-	visibility: visible;
-}
 .fixed {
 	position: fixed;
 }
-.sticky {
-	position: sticky;
+.relative {
+	position: relative;
 }
 .top-0 {
 	top: 0px;
 }
-.bottom-\[50px\] {
-	bottom: 50px;
-}
-.bottom-\[-50px\] {
-	bottom: -50px;
-}
-.bottom-\[60px\] {
-	bottom: 60px;
-}
 .bottom-\[80px\] {
 	bottom: 80px;
+}
+.top-\[-1\] {
+	top: -1;
+}
+.top-\[-5px\] {
+	top: -5px;
 }
 .z-\[-99999\] {
 	z-index: -99999;
@@ -587,11 +581,11 @@ video {
 .z-\[-999999\] {
 	z-index: -999999;
 }
-.float-right {
-	float: right;
-}
 .float-left {
 	float: left;
+}
+.float-right {
+	float: right;
 }
 .clear-both {
 	clear: both;
@@ -613,17 +607,30 @@ video {
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
 }
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
 .mt-10 {
 	margin-top: 2.5rem;
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
+.mt-3 {
+	margin-top: 0.75rem;
+}
 .mt-1 {
 	margin-top: 0.25rem;
 }
 .mt-2 {
 	margin-top: 0.5rem;
+}
+.ml-\[50\%\] {
+	margin-left: 50%;
+}
+.mt-7 {
+	margin-top: 1.75rem;
 }
 .mb-6 {
 	margin-bottom: 1.5rem;
@@ -634,8 +641,8 @@ video {
 .ml-5 {
 	margin-left: 1.25rem;
 }
-.mt-3 {
-	margin-top: 0.75rem;
+.mt-5 {
+	margin-top: 1.25rem;
 }
 .block {
 	display: block;
@@ -643,20 +650,20 @@ video {
 .flex {
 	display: flex;
 }
-.hidden {
-	display: none;
-}
 .h-full {
 	height: 100%;
-}
-.h-\[80\%\] {
-	height: 80%;
 }
 .h-9 {
 	height: 2.25rem;
 }
+.h-8 {
+	height: 2rem;
+}
 .h-\[200px\] {
 	height: 200px;
+}
+.h-7 {
+	height: 1.75rem;
 }
 .w-full {
 	width: 100%;
@@ -681,6 +688,11 @@ video {
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-y-scroll {
 	overflow-y: scroll;
 }
@@ -690,9 +702,6 @@ video {
 .rounded-xl {
 	border-radius: 0.75rem;
 }
-.border-2 {
-	border-width: 2px;
-}
 .border-0 {
 	border-width: 0px;
 }
@@ -701,9 +710,6 @@ video {
 }
 .border-l-2 {
 	border-left-width: 2px;
-}
-.border-solid {
-	border-style: solid;
 }
 .border-red-700 {
 	--tw-border-opacity: 1;
@@ -721,37 +727,16 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
 }
-.bg-black {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
-.bg-gradient-to-tl {
-	background-image: linear-gradient(to top left, var(--tw-gradient-stops));
-}
-.bg-gradient-to-bl {
-	background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
-}
-.bg-gradient-to-b {
-	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
 .bg-gradient-to-br {
 	background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-.from-red-800 {
-	--tw-gradient-from: #991b1b;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(153, 27, 27, 0));
-}
-.from-red-400 {
-	--tw-gradient-from: #f87171;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(248, 113, 113, 0));
-}
-.from-red-500 {
-	--tw-gradient-from: #ef4444;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
 }
 .from-red-600 {
 	--tw-gradient-from: #dc2626;
@@ -766,21 +751,13 @@ video {
 .p-2 {
 	padding: 0.5rem;
 }
-.px-3 {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
-}
 .py-3 {
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
 }
-.px-4 {
-	padding-left: 1rem;
-	padding-right: 1rem;
-}
-.px-10 {
-	padding-left: 2.5rem;
-	padding-right: 2.5rem;
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
 }
 .px-24 {
 	padding-left: 6rem;
@@ -789,6 +766,10 @@ video {
 .px-20 {
 	padding-left: 5rem;
 	padding-right: 5rem;
+}
+.px-1 {
+	padding-left: 0.25rem;
+	padding-right: 0.25rem;
 }
 .pl-2 {
 	padding-left: 0.5rem;
@@ -808,6 +789,10 @@ video {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
@@ -816,12 +801,11 @@ video {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
 .font-bold {
 	font-weight: 700;
+}
+.tracking-wide {
+	letter-spacing: 0.025em;
 }
 .text-white {
 	--tw-text-opacity: 1;
@@ -830,6 +814,10 @@ video {
 .text-red-700 {
 	--tw-text-opacity: 1;
 	color: rgba(185, 28, 28, var(--tw-text-opacity));
+}
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .text-red-800 {
 	--tw-text-opacity: 1;
@@ -843,14 +831,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
-.text-black {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-.text-red-500 {
-	--tw-text-opacity: 1;
-	color: rgba(239, 68, 68, var(--tw-text-opacity));
-}
 .underline {
 	text-decoration: underline;
 }
@@ -858,20 +838,11 @@ video {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-xl {
-	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .drop-shadow-md {
 	--tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
 }
 
 input:focus {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
-
-.focus\:outline-none:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
 }
