--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -563,17 +563,14 @@ video {
 .relative {
 	position: relative;
 }
+.top-\[-5px\] {
+	top: -5px;
+}
 .top-0 {
 	top: 0px;
 }
 .bottom-\[80px\] {
 	bottom: 80px;
-}
-.top-\[-1\] {
-	top: -1;
-}
-.top-\[-5px\] {
-	top: -5px;
 }
 .z-\[-99999\] {
 	z-index: -99999;
@@ -603,13 +600,13 @@ video {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
 }
-.mx-3 {
-	margin-left: 0.75rem;
-	margin-right: 0.75rem;
-}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
+}
+.mx-3 {
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
 }
 .mt-10 {
 	margin-top: 2.5rem;
@@ -626,12 +623,6 @@ video {
 .mt-2 {
 	margin-top: 0.5rem;
 }
-.ml-\[50\%\] {
-	margin-left: 50%;
-}
-.mt-7 {
-	margin-top: 1.75rem;
-}
 .mb-6 {
 	margin-bottom: 1.5rem;
 }
@@ -640,9 +631,6 @@ video {
 }
 .ml-5 {
 	margin-left: 1.25rem;
-}
-.mt-5 {
-	margin-top: 1.25rem;
 }
 .block {
 	display: block;
@@ -656,14 +644,11 @@ video {
 .h-9 {
 	height: 2.25rem;
 }
-.h-8 {
-	height: 2rem;
+.h-7 {
+	height: 1.75rem;
 }
 .h-\[200px\] {
 	height: 200px;
-}
-.h-7 {
-	height: 1.75rem;
 }
 .w-full {
 	width: 100%;
@@ -680,6 +665,9 @@ video {
 .w-\[30\%\] {
 	width: 30%;
 }
+.cursor-pointer {
+	cursor: pointer;
+}
 .flex-row {
 	flex-direction: row;
 }
@@ -687,11 +675,6 @@ video {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-y-scroll {
 	overflow-y: scroll;
