--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -557,11 +557,47 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
+.container {
+	width: 100%;
+}
+@media (min-width: 640px) {
+
+	.container {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+
+	.container {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+
+	.container {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+
+	.container {
+		max-width: 1280px;
+	}
+}
+@media (min-width: 1536px) {
+
+	.container {
+		max-width: 1536px;
+	}
+}
 .fixed {
 	position: fixed;
 }
 .relative {
 	position: relative;
+}
+.absolute {
+	position: absolute;
 }
 .top-\[-5px\] {
 	top: -5px;
@@ -572,11 +608,26 @@ video {
 .bottom-\[80px\] {
 	bottom: 80px;
 }
+.top-10 {
+	top: 2.5rem;
+}
+.left-1\/2 {
+	left: 50%;
+}
+.right-0 {
+	right: 0px;
+}
+.right-1\/2 {
+	right: 50%;
+}
 .z-\[-99999\] {
 	z-index: -99999;
 }
 .z-\[-999999\] {
 	z-index: -999999;
+}
+.z-10 {
+	z-index: 10;
 }
 .float-left {
 	float: left;
@@ -608,20 +659,17 @@ video {
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
 }
-.mt-10 {
-	margin-top: 2.5rem;
-}
 .mb-3 {
 	margin-bottom: 0.75rem;
+}
+.mt-10 {
+	margin-top: 2.5rem;
 }
 .mt-3 {
 	margin-top: 0.75rem;
 }
 .mt-1 {
 	margin-top: 0.25rem;
-}
-.mt-2 {
-	margin-top: 0.5rem;
 }
 .mb-6 {
 	margin-bottom: 1.5rem;
@@ -632,11 +680,17 @@ video {
 .ml-5 {
 	margin-left: 1.25rem;
 }
+.ml-\[-20\%\] {
+	margin-left: -20%;
+}
 .block {
 	display: block;
 }
 .flex {
 	display: flex;
+}
+.table {
+	display: table;
 }
 .h-full {
 	height: 100%;
@@ -664,6 +718,9 @@ video {
 }
 .w-\[30\%\] {
 	width: 30%;
+}
+.flex-grow {
+	flex-grow: 1;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -694,6 +751,9 @@ video {
 .border-l-2 {
 	border-left-width: 2px;
 }
+.border-b {
+	border-bottom-width: 1px;
+}
 .border-red-700 {
 	--tw-border-opacity: 1;
 	border-color: rgba(185, 28, 28, var(--tw-border-opacity));
@@ -706,6 +766,10 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
+.border-gray-600 {
+	--tw-border-opacity: 1;
+	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
 .bg-red-800 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
@@ -717,6 +781,14 @@ video {
 .bg-black {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-gray-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-red-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(254, 242, 242, var(--tw-bg-opacity));
 }
 .bg-gradient-to-br {
 	background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
@@ -733,6 +805,12 @@ video {
 }
 .p-2 {
 	padding: 0.5rem;
+}
+.p-1\.5 {
+	padding: 0.375rem;
+}
+.p-1 {
+	padding: 0.25rem;
 }
 .py-3 {
 	padding-top: 0.75rem;
@@ -753,6 +831,10 @@ video {
 .px-1 {
 	padding-left: 0.25rem;
 	padding-right: 0.25rem;
+}
+.px-7 {
+	padding-left: 1.75rem;
+	padding-right: 1.75rem;
 }
 .pl-2 {
 	padding-left: 0.5rem;
@@ -784,6 +866,14 @@ video {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
+.text-6xl {
+	font-size: 3.75rem;
+	line-height: 1;
+}
 .font-bold {
 	font-weight: 700;
 }
@@ -814,6 +904,14 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
+.text-gray-500 {
+	--tw-text-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -823,6 +921,13 @@ video {
 }
 .drop-shadow-md {
 	--tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+}
+.transition {
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
 }
 
 input:focus {
