--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -683,6 +683,12 @@ video {
 .ml-\[-20\%\] {
 	margin-left: -20%;
 }
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.mt-5 {
+	margin-top: 1.25rem;
+}
 .block {
 	display: block;
 }
@@ -721,6 +727,9 @@ video {
 }
 .flex-grow {
 	flex-grow: 1;
+}
+.border-collapse {
+	border-collapse: collapse;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -904,13 +913,13 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
-.text-gray-500 {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
 .text-gray-600 {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.text-gray-500 {
+	--tw-text-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
