--- a/web/resources/css/navbar.css
+++ b/web/resources/css/navbar.css
@@ -9,11 +9,11 @@
             z-index: 100; /*bring it to the front*/
             bottom: 0;
             width: 100%;
-            height: 100px;
+            height: 80px;
             box-shadow: 0 0 3px rgb(0, 0, 0.2);
             background-color: rgb(255, 0, 0);
             display: flex;
-            overflow-x: auto;
+/*            overflow-x: auto;*/
 
         }
 
