--- a/web/templates/test.xhtml
+++ b/web/templates/test.xhtml
@@ -3,6 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    <h:head>
+        <title>Emma</title>
+    </h:head>
     <h:body>
         <ui:composition template="/student/common.xhtml">
             <ui:define name="title">
