--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -632,9 +632,6 @@ video {
 .z-10 {
 	z-index: 10;
 }
-.z-\[-999999\] {
-	z-index: -999999;
-}
 .float-left {
 	float: left;
 }
@@ -653,9 +650,6 @@ video {
 .m-3 {
 	margin: 0.75rem;
 }
-.m-10 {
-	margin: 2.5rem;
-}
 .mx-1 {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
@@ -667,10 +661,6 @@ video {
 .mx-2 {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
-}
-.mx-3 {
-	margin-left: 0.75rem;
-	margin-right: 0.75rem;
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
@@ -702,14 +692,14 @@ video {
 .ml-\[-20\%\] {
 	margin-left: -20%;
 }
-.ml-5 {
-	margin-left: 1.25rem;
+.mt-20 {
+	margin-top: 5rem;
+}
+.mt-12 {
+	margin-top: 3rem;
 }
 .block {
 	display: block;
-}
-.inline {
-	display: inline;
 }
 .flex {
 	display: flex;
@@ -735,9 +725,6 @@ video {
 .h-\[200px\] {
 	height: 200px;
 }
-.h-10 {
-	height: 2.5rem;
-}
 .w-full {
 	width: 100%;
 }
@@ -756,11 +743,17 @@ video {
 .w-\[500px\] {
 	width: 500px;
 }
-.w-1\/5 {
-	width: 20%;
+.w-\[75\%\] {
+	width: 75%;
 }
-.w-10 {
-	width: 2.5rem;
+.w-1\/2 {
+	width: 50%;
+}
+.w-\[50\%\] {
+	width: 50%;
+}
+.w-\[48\%\] {
+	width: 48%;
 }
 .flex-grow {
 	flex-grow: 1;
@@ -774,6 +767,12 @@ video {
 .flex-row {
 	flex-direction: row;
 }
+.place-items-stretch {
+	place-items: stretch;
+}
+.justify-between {
+	justify-content: space-between;
+}
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -781,9 +780,6 @@ video {
 }
 .overflow-y-auto {
 	overflow-y: auto;
-}
-.overflow-y-scroll {
-	overflow-y: scroll;
 }
 .rounded-lg {
 	border-radius: 0.5rem;
@@ -803,9 +799,6 @@ video {
 .border-b {
 	border-bottom-width: 1px;
 }
-.border-l-2 {
-	border-left-width: 2px;
-}
 .border-red-700 {
 	--tw-border-opacity: 1;
 	border-color: rgba(185, 28, 28, var(--tw-border-opacity));
@@ -817,10 +810,6 @@ video {
 .border-gray-600 {
 	--tw-border-opacity: 1;
 	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
-}
-.border-gray-500 {
-	--tw-border-opacity: 1;
-	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -841,6 +830,10 @@ video {
 .bg-red-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(254, 242, 242, var(--tw-bg-opacity));
+}
+.bg-red-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
 }
 .bg-gradient-to-br {
 	background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
@@ -887,9 +880,6 @@ video {
 .px-7 {
 	padding-left: 1.75rem;
 	padding-right: 1.75rem;
-}
-.pl-2 {
-	padding-left: 0.5rem;
 }
 .text-center {
 	text-align: center;
@@ -959,10 +949,6 @@ video {
 .text-gray-600 {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-.text-gray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
