--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -149,6 +149,9 @@
 .block {
     display: block
 }
+.inline {
+    display: inline
+}
 .flex {
     display: flex
 }
@@ -419,6 +422,9 @@
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms
+}
+.duration {
     transition-duration: 150ms
 }
 
