--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -1,5 +1,4 @@
 * {
-    margin: 0;
     --tw-shadow: 0 0 #0000;
     --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
     --tw-ring-offset-width: 0px;
@@ -63,6 +62,12 @@
 .top-0 {
     top: 0px
 }
+.left-\[50px\] {
+    left: 50px
+}
+.top-\[50px\] {
+    top: 50px
+}
 .top-10 {
     top: 2.5rem
 }
@@ -72,14 +77,8 @@
 .right-1\/2 {
     right: 50%
 }
-.left-\[50px\] {
-    left: 50px
-}
-.right-\[50px\] {
-    right: 50px
-}
-.top-\[50px\] {
-    top: 50px
+.bottom-0 {
+    bottom: 0px
 }
 .z-\[-99999\] {
     z-index: -99999
@@ -193,38 +192,8 @@
     height: 200px
 }
 .w-full {
-    width: 100%;
-    
-    
+    width: 100%
 }
-#maindiv{
-    background-image: url("https://blog.obilet.com/wp-content/uploads/2018/09/istanbul-%C3%BCniversitesi-avc%C4%B1lar-kamp%C3%BCs%C3%BC.jpg");
-    background-color: white;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-}
-
-#sifreunutma{
-    background-image: url("https://pbs.twimg.com/media/ElPAQIsWkAAL6Z9.jpg:large");
-    background-color: #cccccc;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-.registImg{
-    background-image: url("https://pbs.twimg.com/media/ElPAQIsWkAAL6Z9.jpg:large");
-    background-color: #cccccc;
-    height: auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: fixed;
-}
-
 .w-\[40\%\] {
     width: 40%
 }
@@ -318,6 +287,9 @@
     --tw-bg-opacity: 1;
     background-color: rgba(153, 27, 27, var(--tw-bg-opacity))
 }
+.bg-transparent {
+    background-color: transparent
+}
 .bg-red-600 {
     --tw-bg-opacity: 1;
     background-color: rgba(220, 38, 38, var(--tw-bg-opacity))
@@ -334,14 +306,8 @@
     --tw-bg-opacity: 1;
     background-color: rgba(254, 242, 242, var(--tw-bg-opacity))
 }
-.bg-transparent {
-    background-color: transparent
-}
 .bg-gradient-to-br {
     background-image: linear-gradient(to bottom right, var(--tw-gradient-stops))
-}
-.bg-none {
-    background-image: none
 }
 .from-red-600 {
     --tw-gradient-from: #dc2626;
@@ -413,13 +379,13 @@
     font-size: 1.5rem;
     line-height: 2rem
 }
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem
-}
 .text-6xl {
     font-size: 3.75rem;
     line-height: 1
+}
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem
 }
 .font-bold {
     font-weight: 700
@@ -455,6 +421,10 @@
     --tw-text-opacity: 1;
     color: rgba(29, 78, 216, var(--tw-text-opacity))
 }
+.text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgba(156, 163, 175, var(--tw-text-opacity))
+}
 .text-gray-600 {
     --tw-text-opacity: 1;
     color: rgba(75, 85, 99, var(--tw-text-opacity))
@@ -462,10 +432,6 @@
 .text-gray-500 {
     --tw-text-opacity: 1;
     color: rgba(107, 114, 128, var(--tw-text-opacity))
-}
-.text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgba(156, 163, 175, var(--tw-text-opacity))
 }
 .underline {
     text-decoration: underline
