--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -47,6 +47,12 @@
 .top-\[-5px\] {
     top: -5px
 }
+.left-\[50px\] {
+    left: 50px
+}
+.top-\[50px\] {
+    top: 50px
+}
 .top-\[73px\] {
     top: 73px
 }
@@ -62,11 +68,8 @@
 .top-0 {
     top: 0px
 }
-.left-\[50px\] {
-    left: 50px
-}
-.top-\[50px\] {
-    top: 50px
+.bottom-0 {
+    bottom: 0px
 }
 .top-10 {
     top: 2.5rem
@@ -76,9 +79,6 @@
 }
 .right-1\/2 {
     right: 50%
-}
-.bottom-0 {
-    bottom: 0px
 }
 .z-\[-99999\] {
     z-index: -99999
@@ -221,6 +221,26 @@
 .border-collapse {
     border-collapse: collapse
 }
+@-webkit-keyframes mine {
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
+}
+@keyframes mine {
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
+}
+.animate-mine {
+    -webkit-animation: mine 1s ease-in 1;
+            animation: mine 1s ease-in 1
+}
 .cursor-pointer {
     cursor: pointer
 }
@@ -279,6 +299,9 @@
     --tw-bg-opacity: 1;
     background-color: rgba(0, 0, 0, var(--tw-bg-opacity))
 }
+.bg-transparent {
+    background-color: transparent
+}
 .bg-green-600 {
     --tw-bg-opacity: 1;
     background-color: rgba(5, 150, 105, var(--tw-bg-opacity))
@@ -286,9 +309,6 @@
 .bg-red-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(153, 27, 27, var(--tw-bg-opacity))
-}
-.bg-transparent {
-    background-color: transparent
 }
 .bg-red-600 {
     --tw-bg-opacity: 1;
@@ -321,6 +341,9 @@
 }
 .p-2 {
     padding: 0.5rem
+}
+.p-5 {
+    padding: 1.25rem
 }
 .p-1\.5 {
     padding: 0.375rem
@@ -375,13 +398,13 @@
     font-size: 2.25rem;
     line-height: 2.5rem
 }
-.text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem
-}
 .text-6xl {
     font-size: 3.75rem;
     line-height: 1
+}
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem
 }
 .text-xs {
     font-size: 0.75rem;
@@ -409,6 +432,10 @@
     --tw-text-opacity: 1;
     color: rgba(153, 27, 27, var(--tw-text-opacity))
 }
+.text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgba(156, 163, 175, var(--tw-text-opacity))
+}
 .text-red-600 {
     --tw-text-opacity: 1;
     color: rgba(220, 38, 38, var(--tw-text-opacity))
@@ -421,10 +448,6 @@
     --tw-text-opacity: 1;
     color: rgba(29, 78, 216, var(--tw-text-opacity))
 }
-.text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgba(156, 163, 175, var(--tw-text-opacity))
-}
 .text-gray-600 {
     --tw-text-opacity: 1;
     color: rgba(75, 85, 99, var(--tw-text-opacity))
@@ -435,6 +458,9 @@
 }
 .underline {
     text-decoration: underline
+}
+.opacity-0 {
+    opacity: 0
 }
 .shadow-lg {
     --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
