--- a/index.css
+++ b/index.css
@@ -3,5 +3,7 @@
 @tailwind utilities;
 
 input{
-    @apply focus:outline-none;
+    @apply focus:outline-none rounded-lg px-2;
+    border: none;
+
 }
