--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -1,490 +1,657 @@
-* {
+*{
     --tw-shadow: 0 0 #0000;
     --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
     --tw-ring-color: rgba(59, 130, 246, 0.5);
     --tw-ring-offset-shadow: 0 0 #0000;
-    --tw-ring-shadow: 0 0 #0000
+    --tw-ring-shadow: 0 0 #0000;
+
 }
-.container {
-    width: 100%
+.container{
+    width: 100%;
+
 }
-@media (min-width: 640px) {
-    .container {
-        max-width: 640px
+@media (min-width: 640px){
+    .container{
+        max-width: 640px;
+
     }
+
 }
-@media (min-width: 768px) {
-    .container {
-        max-width: 768px
+@media (min-width: 768px){
+    .container{
+        max-width: 768px;
+
     }
+
 }
-@media (min-width: 1024px) {
-    .container {
-        max-width: 1024px
+@media (min-width: 1024px){
+    .container{
+        max-width: 1024px;
+
     }
+
 }
-@media (min-width: 1280px) {
-    .container {
-        max-width: 1280px
+@media (min-width: 1280px){
+    .container{
+        max-width: 1280px;
+
     }
+
 }
-@media (min-width: 1536px) {
-    .container {
-        max-width: 1536px
+@media (min-width: 1536px){
+    .container{
+        max-width: 1536px;
+
     }
+
 }
-.fixed {
-    position: fixed
+.fixed{
+    position: fixed;
+
 }
-.relative {
-    position: relative
+.relative{
+    position: relative;
+
 }
-.absolute {
-    position: absolute
+.absolute{
+    position: absolute;
+
 }
-.top-\[-5px\] {
-    top: -5px
+.top-\[-5px\]{
+    top: -5px;
+
 }
-.left-\[50px\] {
-    left: 50px
+.left-\[50px\]{
+    left: 50px;
+
 }
-.top-\[50px\] {
-    top: 50px
+.top-\[50px\]{
+    top: 50px;
+
 }
-.top-\[73px\] {
-    top: 73px
+.top-\[73px\]{
+    top: 73px;
+
 }
-.left-0 {
-    left: 0px
+.left-0{
+    left: 0px;
+
 }
-.right-0 {
-    right: 0px
+.right-0{
+    right: 0px;
+
 }
-.bottom-\[80px\] {
-    bottom: 80px
+.bottom-\[80px\]{
+    bottom: 80px;
+
 }
-.top-0 {
-    top: 0px
+.top-0{
+    top: 0px;
+
 }
-.bottom-0 {
-    bottom: 0px
+.bottom-0{
+    bottom: 0px;
+
 }
-.top-10 {
-    top: 2.5rem
+.top-10{
+    top: 2.5rem;
+
 }
-.left-1\/2 {
-    left: 50%
+.left-1\/2{
+    left: 50%;
+
 }
-.right-1\/2 {
-    right: 50%
+.right-1\/2{
+    right: 50%;
+
 }
-.z-\[-99999\] {
-    z-index: -99999
+.z-\[-99999\]{
+    z-index: -99999;
+
 }
-.z-10 {
-    z-index: 10
+.z-10{
+    z-index: 10;
+
 }
-.float-left {
-    float: left
+.float-left{
+    float: left;
+
 }
-.float-right {
-    float: right
+.float-right{
+    float: right;
+
 }
-.clear-both {
-    clear: both
+.clear-both{
+    clear: both;
+
 }
-.clear-right {
-    clear: right
+.clear-right{
+    clear: right;
+
 }
-.m-auto {
-    margin: auto
+.m-auto{
+    margin: auto;
+
 }
-.m-\[-10px\] {
-    margin: -10px
+.m-\[-10px\]{
+    margin: -10px;
+
 }
-.m-3 {
-    margin: 0.75rem
+.m-3{
+    margin: 0.75rem;
+
 }
-.mx-1 {
+.mx-1{
     margin-left: 0.25rem;
-    margin-right: 0.25rem
+    margin-right: 0.25rem;
+
 }
-.mx-auto {
+.mx-auto{
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+
 }
-.mx-2 {
+.mx-2{
     margin-left: 0.5rem;
-    margin-right: 0.5rem
+    margin-right: 0.5rem;
+
 }
-.mb-3 {
-    margin-bottom: 0.75rem
+.mb-3{
+    margin-bottom: 0.75rem;
+
 }
-.mt-10 {
-    margin-top: 2.5rem
+.mt-10{
+    margin-top: 2.5rem;
+
 }
-.mt-3 {
-    margin-top: 0.75rem
+.mt-3{
+    margin-top: 0.75rem;
+
 }
-.mt-1 {
-    margin-top: 0.25rem
+.mt-1{
+    margin-top: 0.25rem;
+
 }
-.mt-5 {
-    margin-top: 1.25rem
+.mt-5{
+    margin-top: 1.25rem;
+
 }
-.mb-5 {
-    margin-bottom: 1.25rem
+.mb-5{
+    margin-bottom: 1.25rem;
+
 }
-.ml-10 {
-    margin-left: 2.5rem
+.ml-10{
+    margin-left: 2.5rem;
+
 }
-.mb-2 {
-    margin-bottom: 0.5rem
+.mb-2{
+    margin-bottom: 0.5rem;
+
 }
-.mb-6 {
-    margin-bottom: 1.5rem
+.mb-6{
+    margin-bottom: 1.5rem;
+
 }
-.mt-12 {
-    margin-top: 3rem
+.mt-12{
+    margin-top: 3rem;
+
 }
-.mr-\[25\%\] {
-    margin-right: 25%
+.mr-\[25\%\]{
+    margin-right: 25%;
+
 }
-.ml-2 {
-    margin-left: 0.5rem
+.ml-2{
+    margin-left: 0.5rem;
+
 }
-.ml-\[-20\%\] {
-    margin-left: -20%
+.ml-\[-20\%\]{
+    margin-left: -20%;
+
 }
-.block {
-    display: block
+.block{
+    display: block;
+
 }
-.inline {
-    display: inline
+.inline{
+    display: inline;
+
 }
-.flex {
-    display: flex
+.flex{
+    display: flex;
+
 }
-.table {
-    display: table
+.table{
+    display: table;
+
 }
-.hidden {
-    display: none
+.hidden{
+    display: none;
+
 }
-.h-full {
-    height: 100%
+.h-full{
+    height: 100%;
+
 }
-.h-9 {
-    height: 2.25rem
+.h-9{
+    height: 2.25rem;
+
 }
-.h-7 {
-    height: 1.75rem
+.h-7{
+    height: 1.75rem;
+
 }
-.h-\[70px\] {
-    height: 70px
+.h-\[70px\]{
+    height: 70px;
+
 }
-.h-\[98\%\] {
-    height: 98%
+.h-\[98\%\]{
+    height: 98%;
+
 }
-.h-\[200px\] {
-    height: 200px
+.h-\[200px\]{
+    height: 200px;
+
 }
-.w-full {
-    width: 100%
+.h-\[300px\]{
+    height: 300px;
+
 }
-.w-\[40\%\] {
-    width: 40%
+.w-full{
+    width: 100%;
+
 }
-.w-\[20\%\] {
-    width: 20%
+.w-\[40\%\]{
+    width: 40%;
+
 }
-.w-\[80\%\] {
-    width: 80%
+.w-\[20\%\]{
+    width: 20%;
+
 }
-.w-\[30\%\] {
-    width: 30%
+.w-\[80\%\]{
+    width: 80%;
+
 }
-.w-\[500px\] {
-    width: 500px
+.w-\[30\%\]{
+    width: 30%;
+
 }
-.w-\[75\%\] {
-    width: 75%
+.w-\[500px\]{
+    width: 500px;
+
 }
-.w-\[48\%\] {
-    width: 48%
+.w-\[75\%\]{
+    width: 75%;
+
 }
-.flex-grow {
-    flex-grow: 1
+.w-\[300px\]{
+    width: 300px;
+
 }
-.border-collapse {
-    border-collapse: collapse
+.w-\[48\%\]{
+    width: 48%;
+
 }
-@-webkit-keyframes mine {
-    0% {
-        opacity: 0
+.flex-grow{
+    flex-grow: 1;
+
+}
+.border-collapse{
+    border-collapse: collapse;
+
+}
+@-webkit-keyframes mine{
+    0%{
+        opacity: 0;
+
     }
-    100% {
-        opacity: 1
+    100%{
+        opacity: 1;
+
     }
+
 }
-@keyframes mine {
-    0% {
-        opacity: 0
+@keyframes mine{
+    0%{
+        opacity: 0;
+
     }
-    100% {
-        opacity: 1
+    100%{
+        opacity: 1;
+
     }
+
 }
-.animate-mine {
+.animate-mine{
     -webkit-animation: mine 1s ease-in 1;
-            animation: mine 1s ease-in 1
+            animation: mine 1s ease-in 1;
+
 }
-.cursor-pointer {
-    cursor: pointer
+.cursor-pointer{
+    cursor: pointer;
+
 }
-.flex-row {
-    flex-direction: row
+.flex-row{
+    flex-direction: row;
+
 }
-.justify-between {
-    justify-content: space-between
+.justify-between{
+    justify-content: space-between;
+
 }
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
     --tw-space-y-reverse: 0;
     margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse))
+    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+
 }
-.overflow-y-auto {
-    overflow-y: auto
+.overflow-y-auto{
+    overflow-y: auto;
+
 }
-.rounded-lg {
-    border-radius: 0.5rem
+.rounded-lg{
+    border-radius: 0.5rem;
+
 }
-.rounded-xl {
-    border-radius: 0.75rem
+.rounded-xl{
+    border-radius: 0.75rem;
+
 }
-.border-0 {
-    border-width: 0px
+.border-0{
+    border-width: 0px;
+
 }
-.border {
-    border-width: 1px
+.border{
+    border-width: 1px;
+
 }
-.border-r {
-    border-right-width: 1px
+.border-r{
+    border-right-width: 1px;
+
 }
-.border-b {
-    border-bottom-width: 1px
+.border-b{
+    border-bottom-width: 1px;
+
 }
-.border-none {
-    border-style: none
+.border-none{
+    border-style: none;
+
 }
-.border-red-700 {
+.border-red-700{
     --tw-border-opacity: 1;
-    border-color: rgba(185, 28, 28, var(--tw-border-opacity))
+    border-color: rgba(185, 28, 28, var(--tw-border-opacity));
+
 }
-.border-red-800 {
+.border-red-800{
     --tw-border-opacity: 1;
-    border-color: rgba(153, 27, 27, var(--tw-border-opacity))
+    border-color: rgba(153, 27, 27, var(--tw-border-opacity));
+
 }
-.border-gray-600 {
+.border-gray-600{
     --tw-border-opacity: 1;
-    border-color: rgba(75, 85, 99, var(--tw-border-opacity))
+    border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+
 }
-.bg-white {
+.bg-white{
     --tw-bg-opacity: 1;
-    background-color: rgba(255, 255, 255, var(--tw-bg-opacity))
+    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+
 }
-.bg-black {
+.bg-black{
     --tw-bg-opacity: 1;
-    background-color: rgba(0, 0, 0, var(--tw-bg-opacity))
+    background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+
 }
-.bg-transparent {
-    background-color: transparent
+.bg-transparent{
+    background-color: transparent;
+
 }
-.bg-green-600 {
+.bg-green-600{
     --tw-bg-opacity: 1;
-    background-color: rgba(5, 150, 105, var(--tw-bg-opacity))
+    background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+
 }
-.bg-red-800 {
+.bg-red-800{
     --tw-bg-opacity: 1;
-    background-color: rgba(153, 27, 27, var(--tw-bg-opacity))
+    background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
+
 }
-.bg-red-600 {
+.bg-red-600{
     --tw-bg-opacity: 1;
-    background-color: rgba(220, 38, 38, var(--tw-bg-opacity))
+    background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+
 }
-.bg-green-800 {
+.bg-green-800{
     --tw-bg-opacity: 1;
-    background-color: rgba(6, 95, 70, var(--tw-bg-opacity))
+    background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
+
 }
-.bg-gray-50 {
+.bg-gray-50{
     --tw-bg-opacity: 1;
-    background-color: rgba(249, 250, 251, var(--tw-bg-opacity))
+    background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+
 }
-.bg-red-50 {
+.bg-red-50{
     --tw-bg-opacity: 1;
-    background-color: rgba(254, 242, 242, var(--tw-bg-opacity))
+    background-color: rgba(254, 242, 242, var(--tw-bg-opacity));
+
 }
-.bg-gradient-to-br {
-    background-image: linear-gradient(to bottom right, var(--tw-gradient-stops))
+.bg-gradient-to-br{
+    background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+
 }
-.from-red-600 {
+.from-red-600{
     --tw-gradient-from: #dc2626;
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0))
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
+
 }
-.to-red-900 {
-    --tw-gradient-to: #7f1d1d
+.to-red-900{
+    --tw-gradient-to: #7f1d1d;
+
 }
-.p-3 {
-    padding: 0.75rem
+.p-3{
+    padding: 0.75rem;
+
 }
-.p-2 {
-    padding: 0.5rem
+.p-2{
+    padding: 0.5rem;
+
 }
-.p-5 {
-    padding: 1.25rem
+.p-5{
+    padding: 1.25rem;
+
 }
-.p-1\.5 {
-    padding: 0.375rem
+.p-1\.5{
+    padding: 0.375rem;
+
 }
-.p-1 {
-    padding: 0.25rem
+.p-1{
+    padding: 0.25rem;
+
 }
-.py-3 {
+.py-3{
     padding-top: 0.75rem;
-    padding-bottom: 0.75rem
+    padding-bottom: 0.75rem;
+
 }
-.px-3 {
+.px-3{
     padding-left: 0.75rem;
-    padding-right: 0.75rem
+    padding-right: 0.75rem;
+
 }
-.px-24 {
+.px-24{
     padding-left: 6rem;
-    padding-right: 6rem
+    padding-right: 6rem;
+
 }
-.px-20 {
+.px-20{
     padding-left: 5rem;
-    padding-right: 5rem
+    padding-right: 5rem;
+
 }
-.px-1 {
+.px-1{
     padding-left: 0.25rem;
-    padding-right: 0.25rem
+    padding-right: 0.25rem;
+
 }
-.px-7 {
+.px-7{
     padding-left: 1.75rem;
-    padding-right: 1.75rem
+    padding-right: 1.75rem;
+
 }
-.text-center {
-    text-align: center
+.text-center{
+    text-align: center;
+
 }
-.text-5xl {
+.text-5xl{
     font-size: 3rem;
-    line-height: 1
+    line-height: 1;
+
 }
-.text-xl {
+.text-xl{
     font-size: 1.25rem;
-    line-height: 1.75rem
+    line-height: 1.75rem;
+
 }
-.text-sm {
+.text-sm{
     font-size: 0.875rem;
-    line-height: 1.25rem
+    line-height: 1.25rem;
+
 }
-.text-3xl {
+.text-3xl{
     font-size: 1.875rem;
-    line-height: 2.25rem
+    line-height: 2.25rem;
+
 }
-.text-4xl {
+.text-4xl{
     font-size: 2.25rem;
-    line-height: 2.5rem
+    line-height: 2.5rem;
+
 }
-.text-6xl {
+.text-6xl{
     font-size: 3.75rem;
-    line-height: 1
+    line-height: 1;
+
 }
-.text-2xl {
+.text-2xl{
     font-size: 1.5rem;
-    line-height: 2rem
+    line-height: 2rem;
+
 }
-.text-xs {
+.text-xs{
     font-size: 0.75rem;
-    line-height: 1rem
+    line-height: 1rem;
+
 }
-.font-bold {
-    font-weight: 700
+.font-bold{
+    font-weight: 700;
+
 }
-.tracking-wide {
-    letter-spacing: 0.025em
+.tracking-wide{
+    letter-spacing: 0.025em;
+
 }
-.text-white {
+.text-white{
     --tw-text-opacity: 1;
-    color: rgba(255, 255, 255, var(--tw-text-opacity))
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+
 }
-.text-red-700 {
+.text-red-700{
     --tw-text-opacity: 1;
-    color: rgba(185, 28, 28, var(--tw-text-opacity))
+    color: rgba(185, 28, 28, var(--tw-text-opacity));
+
 }
-.text-black {
+.text-black{
     --tw-text-opacity: 1;
-    color: rgba(0, 0, 0, var(--tw-text-opacity))
+    color: rgba(0, 0, 0, var(--tw-text-opacity));
+
 }
-.text-red-800 {
+.text-red-800{
     --tw-text-opacity: 1;
-    color: rgba(153, 27, 27, var(--tw-text-opacity))
+    color: rgba(153, 27, 27, var(--tw-text-opacity));
+
 }
-.text-gray-400 {
+.text-gray-400{
     --tw-text-opacity: 1;
-    color: rgba(156, 163, 175, var(--tw-text-opacity))
+    color: rgba(156, 163, 175, var(--tw-text-opacity));
+
 }
-.text-red-600 {
+.text-red-600{
     --tw-text-opacity: 1;
-    color: rgba(220, 38, 38, var(--tw-text-opacity))
+    color: rgba(220, 38, 38, var(--tw-text-opacity));
+
 }
-.text-blue-800 {
+.text-blue-800{
     --tw-text-opacity: 1;
-    color: rgba(30, 64, 175, var(--tw-text-opacity))
+    color: rgba(30, 64, 175, var(--tw-text-opacity));
+
 }
-.text-blue-700 {
+.text-blue-700{
     --tw-text-opacity: 1;
-    color: rgba(29, 78, 216, var(--tw-text-opacity))
+    color: rgba(29, 78, 216, var(--tw-text-opacity));
+
 }
-.text-gray-600 {
+.text-gray-600{
     --tw-text-opacity: 1;
-    color: rgba(75, 85, 99, var(--tw-text-opacity))
+    color: rgba(75, 85, 99, var(--tw-text-opacity));
+
 }
-.text-gray-500 {
+.text-gray-500{
     --tw-text-opacity: 1;
-    color: rgba(107, 114, 128, var(--tw-text-opacity))
+    color: rgba(107, 114, 128, var(--tw-text-opacity));
+
 }
-.underline {
-    text-decoration: underline
+.underline{
+    text-decoration: underline;
+
 }
-.opacity-0 {
-    opacity: 0
+.opacity-0{
+    opacity: 0;
+
 }
-.shadow-lg {
+.shadow-lg{
     --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+
 }
-.drop-shadow-md {
-    --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06))
+.drop-shadow-md{
+    --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+
 }
-.transition {
+.transition{
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms
+    transition-duration: 150ms;
+
 }
-.duration {
-    transition-duration: 150ms
+.duration{
+    transition-duration: 150ms;
+
 }
 
-input:focus {
+input{
+    border-radius: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+}
+
+input:focus{
     outline: 2px solid transparent;
-    outline-offset: 2px
+    outline-offset: 2px;
+
 }
 
-.hover\:cursor-pointer:hover {
-    cursor: pointer
+input{
+    border: none;
+
+}
+
+.hover\:cursor-pointer:hover{
+    cursor: pointer;
+
 }
