--- a/web/resources/css/tails.css
+++ b/web/resources/css/tails.css
@@ -294,6 +294,10 @@
     width: 48%;
 
 }
+.w-\[98\%\]{
+    width: 98%;
+
+}
 .flex-grow{
     flex-grow: 1;
 
@@ -635,8 +639,6 @@
 
 input{
     border-radius: 0.5rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
 
 }
 
